--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>CCH Vallejo, semestre Mayo 2025, Profr. Marco A. Olivera, sonsulta tu calificación</h1>
+  <h1>CCH Vallejo, semestre Mayo 2025, Profr. Marco A. Olivera, consulta tu calificación</h1>
   <input type="text" id="cuenta" placeholder="Número de cuenta" />
   <button onclick="consultar()">Consultar</button>
   <div id="resultado"></div>
