--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       const resultado = document.getElementById("resultado");
 
       if (calificaciones[cuenta]) {
-        resultado.textContent = `Tu calificación es: ${calificaciones[cuenta]}`;
+        resultado.textContent = ` ${calificaciones[cuenta]}`;
       } else {
         resultado.textContent = "Número de cuenta no encontrado.";
         resultado.style.color = "red";
